Lab_09/public/site.css
body {
    margin-top: 20%;
    background-color:#F3E9D2;
}
.errorH {
    color: red;
    text-align: center;
}
p {
    text-align:center;
    font-family: 'Garamond', 'Georgia', 'Times New Roman', serif;
}

#retHome a:visited, #stevensLink:visited{
    color: blue;
}

#retHome {
    text-emphasis: '.';
}

h1 {
    text-align: center;
    font-family: "Comic Sans MS", "Comic Sans", "cursive", "Arial" sans-serif;
}

form{
    text-align: center;
}
.ignore{
    color:gray;
}
#studentID{
    color:green;
}
footer{
    margin-top:75px;
}
#results{
    text-align:center;
}
#attempts{
    display:inline-block;
    text-align:left;
}
#attempts .is-palindrome, #blue{
    color: #0000FF;
}
#attempts .not-palindrome, #red{
    color: #FF0000;
}

